<resources>
    <string name="app_name">Modern-Expo Group</string>
    <string name="search_title">Search</string>

    <string name="menu_item_information">Information</string>
    <string name="menu_item_task">Your task</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="tab_item_history">History</string>
    <string name="tab_item_ideas">Ideas</string>
    <string name="tab_item_todo">TODO</string>
    <string name="tab_item_birthdays">Birthdays</string>


    <string name="transition_name_name">transition:NAME</string>
    <string name="transition_name_circle">transition:CIRCLE</string>
    <string name="transition_name_phone">transition:PHONE</string>

    <string name="title_activity_details">Contact Details</string>

    <string name="action_sign_in">SIGN IN MODERN-EXPO</string>
    <string name="name_company">Modern-Expo Group</string>
    <string name="sting_email">Your work email</string>

</resources>
