<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:fitsSystemWindows="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/modern_expo_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/name_company"
            android:textSize="20dp"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="40dp"
                android:paddingTop="20dp"
                float:fletTextAppearance="@style/floatlabelededittext">

                <EditText
                    android:id="@+id/text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sting_email"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:drawableLeft="@mipmap/ic_email_outline"
                    android:password="false"
                    android:phoneNumber="false"
                    android:textIsSelectable="false" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <Button
                    android:id="@+id/sing_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/colorWhite"
                    android:focusable="false"
                    android:background="@color/colorButtonSignIn"/>

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>